- DEVSU-2117 - Reduce print title bar text size slightly to prevent clipping when diagnoses are long - Adjust key alterations spacing for beta print view - Rename key alterations css classes to accurately reflect components

--- a/app/views/ReportView/components/GenomicSummary/components/KeyAlterations/index.scss
+++ b/app/views/ReportView/components/GenomicSummary/components/KeyAlterations/index.scss
@@ -15,8 +15,6 @@
   padding: 0 20px;
 
   &__stable {
-    break-inside: avoid;
-    page-break-inside: avoid;
     
     &-title {
       margin: 0 0 8px;
@@ -25,5 +23,17 @@
     &-content {
       padding: 0 16px;
     }
+  }
+
+  &__beta {
+
+    &-content {
+      margin-top: 8px;
+    }
+  }
+
+  &__render {
+    break-inside: avoid;
+    page-break-inside: avoid;
   }
 }
